NOD-690: wip
